--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
             "type": "al",
             "request": "launch",
             "name": "Prueba",
-            "server": "http://localhost",
-            "serverInstance": "BC150",
-            "authentication": "Windows",
+            "server": "http://bc-prem-ext/",
+            "serverInstance": "BC",
+            "authentication": "UserPassword",
             "startupObjectId": 30,
             "startupObjectType": "Page",
             "breakOnError": true,
