--- a/app.json
+++ b/app.json
@@ -3,13 +3,13 @@
   "name": "ALProject2",
   "publisher": "Default publisher",
   "version": "1.0.0.0",
-  "brief": "",
-  "description": "",
-  "privacyStatement": "",
-  "EULA": "",
-  "help": "",
-  "url": "",
-  "logo": "",
+  "brief": "Test",
+  "description": "First app",
+  "privacyStatement": "http://none.com",
+  "EULA": "http://none.com",
+  "help": "http://none.com",
+  "url": "http://none.com",
+  "logo": "./A.png",
   "dependencies": [
     {
       "appId": "63ca2fa4-4f03-4f2b-a480-172fef340d3f",
@@ -34,5 +34,6 @@
   ],
   "contextSensitiveHelpUrl": "https://ALProject2.com/help/",
   "showMyCode": true,
-  "runtime": "4.0"
+  "runtime": "4.0",
+  "features": ["TranslationFile","GenerateCaptions"]
 }
