--- a/AppSourceCop.json
+++ b/AppSourceCop.json
@@ -1,5 +1,5 @@
 {
-    "mandatoryAffixes": ["Aw-","-Test"],
-    "supportedCountries": ["AR","BR"]
 
+    "supportedCountries": ["FR"],
+    "mandatoryAffixes": ["Aw-","-Test"]
 }
